# secret_share_shamir

./: .gitignore  CMakeLists.txt
include/: rand.h  shamir.h
src/: rand_win.c  shamir.cpp
test/: test_shamir.cpp
